# product-data

./: .envrc  .gitignore  .pre-commit-config.yaml  .tool-versions  README.MD  pyproject.toml  simulate_data_load.py
dbt_models/: dbt_project.yml  profiles.yml
dbt_models/models/: sources.yml
dbt_models/models/forecasting/: ml_prophet_price_forecast_input.sql
dbt_models/models/staging/: stg_products.sql
forecasting/: prophet_price.py
product_data/: main.py
